--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,15 @@
 @import "tailwindcss";
+
+
+@theme{
+     --color-secondarytext:#969696;
+     --color-primarytext:#232323;
+     --color-inputbr:#D9D9D9;
+
+    
+}
+
+input[type="date"]::-webkit-calendar-picker-indicator {
+  display: none;
+  -webkit-appearance: none;
+}
