--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,11 +5,15 @@
      --color-secondarytext:#969696;
      --color-primarytext:#232323;
      --color-inputbr:#D9D9D9;
-
-    
+    --color-dropsw:#00000096;
+  
 }
 
 input[type="date"]::-webkit-calendar-picker-indicator {
   display: none;
   -webkit-appearance: none;
+}
+
+.dropsw{
+  box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.59);
 }
